# RTCLib

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  server.cpp
example/client/: CMakeLists.txt  DemoClient.aps  DemoClient.cpp  DemoClient.h  DemoClient.rc  DemoClientDlg.cpp  DemoClientDlg.h  ReadMe.txt  resource.h  stdafx.cpp
example/client/res/: DemoClient.rc2
include/: DemoUse.h  ErrorHandler.h  IPCShMem.h  IPCSignal.h  SignalHandler.h  Utility.h
src/: DemoUse.cpp  ErrorHandler.cpp  Utility.cpp
tools/: common.py  parse_demo_data_buffer.py  sample_profile.txt
